# hydra_code

./: README.md  pyproject.toml
hydra_code/: CHANGELOG.md  __init__.py  chat.py  cli.py  config.py  i18n.py  stats.py  todo.py  ui.py
hydra_code/clients/: __init__.py  base.py  openai_compatible.py
hydra_code/codebase/: __init__.py  context.py
hydra_code/memory/: __init__.py
hydra_code/orchestration/: __init__.py  aggregator.py  communication.py  coordinator.py  dispatcher.py  orchestrator.py  parallel.py  roles.py  sequential.py  state.py
hydra_code/tools/: __init__.py  base.py  codebase_tools.py  command_tools.py  file_tools.py  network_tools.py
